deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: twir
  labels:
    app.kubernetes.io/name: twir
