deploy/kubernetes/base/poolers.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgdog
  namespace: twir
  labels:
    app.kubernetes.io/name: pgdog
spec:
  selector:
    app.kubernetes.io/name: pgdog
  ports:
    - name: postgres
      port: 6432
      targetPort: 6432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgdog
  namespace: twir
  labels:
    app.kubernetes.io/name: pgdog
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pgdog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgdog
    spec:
      serviceAccountName: twir-workloads
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: twir.app/database
                    operator: DoesNotExist
      containers:
        - name: pgdog
          image: ghcr.io/pgdogdev/pgdog:v0.1.34
          command:
            - /bin/sh
            - -c
            - cp /config/start.sh /tmp/start.sh && chmod +x /tmp/start.sh && exec /tmp/start.sh
          ports:
            - name: postgres
              containerPort: 6432
          volumeMounts:
            - name: pgdog-config
              mountPath: /pgdog/pgdog.toml
              subPath: pgdog.toml
            - name: pgdog-config
              mountPath: /config/start.sh
              subPath: start.sh
      volumes:
        - name: pgdog-config
          configMap:
            name: pgdog-config
            defaultMode: 0555
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer
  namespace: twir
  labels:
    app.kubernetes.io/name: pgbouncer
spec:
  selector:
    app.kubernetes.io/name: pgbouncer
  ports:
    - name: postgres
      port: 6432
      targetPort: 6432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer
  namespace: twir
  labels:
    app.kubernetes.io/name: pgbouncer
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pgbouncer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgbouncer
    spec:
      serviceAccountName: twir-workloads
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: twir.app/database
                    operator: DoesNotExist
      containers:
        - name: pgbouncer
          image: bitnamilegacy/pgbouncer:1.23.1
          ports:
            - name: postgres
              containerPort: 6432
